Mejora y correcciones de testing que fallaban en dispositivos en español
Signed-off-by: figonzal1 <felipe.gonzalezalarcon94@gmail.com>

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -79,4 +79,5 @@
     <string name="night_mode_pref_title">Night mode</string>
     <string name="tab_map">Map</string>
     <string name="tab_list">List</string>
+    <string name="recycle_view_content_description_test">List of quakes section</string>
 </resources>
