Testing de navegacion hacia actividad padre y actualización de lista durante on resume
Signed-off-by: figonzal1 <Felipe.gonzalezalarcon94@gmail.com>

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -79,4 +79,5 @@
     <string name="night_mode_pref_title">Modo noche</string>
     <string name="tab_map">Mapa</string>
     <string name="tab_list">Lista</string>
+	<string name="HOME_PARENT">Navegar hacia arriba</string>
 </resources>
