--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -79,4 +79,5 @@
     <string name="night_mode_pref_title">Night mode</string>
     <string name="tab_map">Map</string>
     <string name="tab_list">List</string>
+	<string name="HOME_PARENT">Navigate up</string>
 </resources>
