Implementacion de modo noche automatico con ahorro de energia
Signed-off-by: figonzal1 <Felipe.gonzalezalarcon94@gmail.com>

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -69,12 +69,12 @@
     <string name="alert_pref_summary_on">Enabled</string>
     <string name="alert_pref_summary">Receive quakes notifications of +5.0 degrees</string>
     <string name="night_mode_auto_pref_summary_off">Disabled</string>
-    <string name="night_mode_auto_pref_summary_on">Enabled (10pm-6am)</string>
-    <string name="night_mode_auto_pref_title_switch">Automatic</string>
+    <string name="night_mode_auto_pref_summary_on">Enabled</string>
+    <string name="night_mode_auto_pref_title_switch">Automatic with power save</string>
     <string name="night_mode_manual_pref_summary_off">Disabled</string>
     <string name="night_mode_manual_pref_summary_on">Enabled</string>
-    <string name="night_mode_manual_pref_title_switch">Manual</string>
-    <string name="night_mode_pref_summary">"Avoid eye fatigue "</string>
+    <string name="night_mode_manual_pref_title_switch">Force night mode</string>
+    <string name="night_mode_pref_summary">Save battery and avoid your eyestrain</string>
     <string name="night_mode_pref_title">Night mode</string>
     <string name="tab_map">Map</string>
     <string name="tab_list">List</string>
