--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -69,12 +69,12 @@
     <string name="alert_pref_title_switch">Alertas de sismos</string>
     <string name="alert_pref_summary">Recibe notificaciones de sismos de +5.0 grados</string>
     <string name="night_mode_auto_pref_summary_off">Desactivado</string>
-    <string name="night_mode_auto_pref_summary_on">Activado (10pm-6am)</string>
-    <string name="night_mode_auto_pref_title_switch">Automático</string>
+    <string name="night_mode_auto_pref_summary_on">Activado</string>
+    <string name="night_mode_auto_pref_title_switch">Automático con ahorro de energía</string>
     <string name="night_mode_manual_pref_summary_off">Desactivado</string>
     <string name="night_mode_manual_pref_summary_on">Activado</string>
-    <string name="night_mode_manual_pref_title_switch">Manual</string>
-    <string name="night_mode_pref_summary">Evita tu cansancio ocular</string>
+    <string name="night_mode_manual_pref_title_switch">Forzar modo noche</string>
+    <string name="night_mode_pref_summary">Ahorra batería y evita tu cansancio ocular</string>
     <string name="night_mode_pref_title">Modo noche</string>
     <string name="tab_map">Mapa</string>
     <string name="tab_list">Lista</string>
