Correcciones minimas y correcciones de test
Signed-off-by: figonzal1 <Felipe.gonzalezalarcon94@gmail.com>

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -85,4 +85,5 @@
     <string name="last_quakes_info_card_view_description">This list shows the last 15 earthquakes that occurred in Chile, you can modify the amount in the section &#8942; -> Settings</string>
     <string name="change_log_title">Version</string>
     <string name="change_log_subtitle">Release</string>
+    <string name="tab_reports">Reports</string>
 </resources>
