--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -85,4 +85,5 @@
     <string name="last_quakes_info_card_view_description">En este listado se muestran los últimos 15 sismos ocurridos en Chile, puedes modificar la cantidad en la sección &#8942; -> Configuración</string>
     <string name="change_log_subtitle">¡Novedades!</string>
     <string name="change_log_title">Versión</string>
+    <string name="tab_reports">Reportes</string>
 </resources>
