--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="refresh">Recargar</string>
-    <string name="contact">Contacto</string>
     <string name="search">Buscar</string>
     <string name="circulo_pintado">Color magnitud sismo</string>
     <string name="imagen_toolbar">Imagen toolbar</string>
@@ -14,12 +13,6 @@
     <string name="icono_escala">Icono escala</string>
     <string name="profundidad">Profundidad</string>
     <string name="escala">Escala</string>
-    <string name="icono_mail">Icono email</string>
-    <string name="icono_persona">Icono persona</string>
-    <string name="icono_facebook">Icono facebook</string>
-    <string name="icono_linkedin">Icono linkedin</string>
-    <string name="contact_title_email">Email</string>
-    <string name="contact_title_name">Nombre</string>
     <string name="quake_details_magnitud_local">Magnitud local (Ml)</string>
     <string name="quake_details_magnitud_momento">Magnitud Momento (Mw)</string>
     <string name="icono_sensible">Icono sensible</string>
@@ -38,12 +31,10 @@
     <string name="INVITATION_SUBJECT">Descarga LastQuakeChile App</string>
     <string name="coordenadas_oeste">O</string>
     <string name="coordenadas_este">E</string>
-    <string name="imagen_toolbar_contact">Imagen toolbar contacto</string>
     <string name="seccion_listado_de_sismos">Sección listado de sismos</string>
     <string name="titulo_toolbar">Título toolbar</string>
     <string name="boton_flotante_gmail">Botón flotante gmail</string>
     <string name="boton_flotante_whatsapp">Botón flotante whatsapp</string>
-    <string name="boton_flotante_facebook">Botón flotante Facebook</string>
     <string name="boton_compartir_sismo">Botón compartir sismo</string>
     <string name="imagen_estado_sismo">Imagen estado sismo</string>
     <string name="quakes_details_estado_sismo">Sismo %s</string>
@@ -83,7 +74,15 @@
     <string name="quake_list_number_pref_title">Datos sismos</string>
     <string name="quake_list_number_pref_summary">Número de sismos que quieres ver en lista</string>
     <string name="last_quakes_info_card_view_description">En este listado se muestran los últimos 15 sismos ocurridos en Chile, puedes modificar la cantidad en la sección &#8942; -> Configuración</string>
-    <string name="change_log_subtitle">¡Novedades!</string>
-    <string name="change_log_title">Versión</string>
     <string name="tab_reports">Reportes</string>
+    <string name="no_hay_sismos_registrados">No hay sismos registrados</string>
+    <string name="no_hay_reportes_registrados">No hay reportes registrados</string>
+    <string name="icono_reporte_mensual">Icono reporte mensual</string>
+    <string name="n_sismos_reportados">N° sismos reportados</string>
+    <string name="n_sismos_sensibles">N° sismos sensibles</string>
+    <string name="promedio_magnitud">Promedio magnitud</string>
+    <string name="promedio_profundidad_epicentro">Promedio profundidad epicentro</string>
+    <string name="m_xima_magnitud">Máxima magnitud</string>
+    <string name="m_nima_profundidad">Mínima profundidad</string>
+    <string name="top_ciudades_con_m_s_sismos">Top ciudades con más sismos</string>
 </resources>
