--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -20,9 +20,9 @@
     <string name="FIREBASE_CHANNEL_DESCRIPTION_QUAKES">Recibe alertas de sismos sobre 5 grados</string>
     <string name="last_quakes_info_card_view_tittle">Últimos sismos</string>
     <string name="last_quakes_info_card_view_button">Entendido</string>
-    <string name="VIEWMODEL_TIMEOUT_ERROR">Timeout</string>
+    <string name="VIEWMODEL_TIMEOUT_ERROR">Servidor no response, intente más tarde</string>
     <string name="VIEWMODEL_NOCONNECTION_ERROR">No tienes conexión a Internet</string>
-    <string name="VIEWMODEL_SERVER_ERROR">Servidor no responde, intente más tarde</string>
+    <string name="VIEWMODEL_SERVER_ERROR">¡Ups ha ocurrido un error! Intente mas tarde</string>
     <string name="icono_app">Icono app</string>
     <string name="invitation_welcome">¡Bienvenido!</string>
     <string name="icono_ondas">Icono ondas</string>
@@ -85,4 +85,21 @@
     <string name="m_xima_magnitud">Máxima magnitud</string>
     <string name="m_nima_profundidad">Mínima profundidad</string>
     <string name="top_ciudades_con_m_s_sismos">Top ciudades con más sismos</string>
+    <string name="REWARD_DIALOG_NEGATIVE" translatable="false">Cancelar</string>
+    <string name="REWARD_DIALOG_POSITIVE" translatable="false">Ver video</string>
+    <string name="REWARD_DIALOG_MESSAGE" translatable="false">Ve el video, apoya gratis monetariamente y recibe 1 día libre de publicidad</string>
+    <string name="REWAR_DIALOG_TITLE" translatable="false">¡Apoya a la aplicación!</string>
+    <string name="ENERO">Enero</string>
+    <string name="FEBRERO">Febrero</string>
+    <string name="MARZO">Marzo</string>
+    <string name="ABRIL">April</string>
+    <string name="MAYO">Mayo</string>
+    <string name="JUNIO">Junio</string>
+    <string name="JULIO">Julio</string>
+    <string name="AGOSTO">Agosto</string>
+    <string name="SEPTIEMBRE">Septiembre</string>
+    <string name="OCTUBRE">Octubre</string>
+    <string name="NOVIEMBRE">Noviembre</string>
+    <string name="DICIEMBRE">Diciembre</string>
+    <string name="FORMATO_REPORTE">Reporte %s %s</string>
 </resources>
